--- a/use-cases.html
+++ b/use-cases.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Analytics - Vector Streams</title>
+    <title>Use Cases - Vector Streams</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -44,7 +44,7 @@
                         <div class="absolute top-full left-0 mt-2 w-64 glass-strong rounded-lg shadow-lg opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 z-50">
                             <div class="py-2">
                                 <a href="intelligence-operations.html" class="block px-4 py-2 text-sm text-white hover:bg-purple-600/20 transition-colors">Intelligence Operations</a>
-                                <a href="business-analytics.html" class="block px-4 py-2 text-sm text-white hover:bg-purple-600/20 transition-colors">Business Analytics</a>
+                                <a href="use-cases.html" class="block px-4 py-2 text-sm text-white hover:bg-purple-600/20 transition-colors">Use Cases</a>
                                 <a href="creative-industries.html" class="block px-4 py-2 text-sm text-white hover:bg-purple-600/20 transition-colors">Creative Industries</a>
                                 <a href="research-development.html" class="block px-4 py-2 text-sm text-white hover:bg-purple-600/20 transition-colors">Research & Development</a>
                             </div>
@@ -71,7 +71,7 @@
                         <div class="px-3 py-2 text-white font-medium">Use Cases</div>
                         <div class="pl-6 space-y-1">
                             <a href="intelligence-operations.html" class="block px-3 py-2 text-zinc-300 hover:bg-purple-600/20 rounded-lg transition-colors text-sm">Intelligence Operations</a>
-                            <a href="business-analytics.html" class="block px-3 py-2 text-zinc-300 hover:bg-purple-600/20 rounded-lg transition-colors text-sm">Business Analytics</a>
+                            <a href="use-cases.html" class="block px-3 py-2 text-zinc-300 hover:bg-purple-600/20 rounded-lg transition-colors text-sm">Use Cases</a>
                             <a href="creative-industries.html" class="block px-3 py-2 text-zinc-300 hover:bg-purple-600/20 rounded-lg transition-colors text-sm">Creative Industries</a>
                             <a href="research-development.html" class="block px-3 py-2 text-zinc-300 hover:bg-purple-600/20 rounded-lg transition-colors text-sm">Research & Development</a>
                         </div>
@@ -102,17 +102,17 @@
             <div class="text-center mb-16">
                 <div class="inline-flex items-center space-x-3 mb-4">
                     <span class="text-4xl">📊</span>
-                    <h1 class="text-5xl font-bold text-white holographic">Business Analytics</h1>
+                    <h1 class="text-5xl font-bold text-white holographic">Use Cases</h1>
                 </div>
-                <p class="text-xl text-green-300 mb-4">Data-Driven Business Intelligence</p>
+                <p class="text-xl text-green-300 mb-4">Transform Your Data with Vector Streams</p>
                 <p class="text-lg text-zinc-300 max-w-4xl mx-auto">
-                    Transform your business data into actionable insights. Connect any business API to analyze customer behavior, market trends, operational efficiency, and revenue optimization across all your data sources.
+                    Discover how Vector Streams revolutionizes data processing across industries with real-time intelligence, quantum-enhanced analysis, and seamless API integrations.
                 </p>
             </div>
 
-            <!-- Core Business Analytics -->
+            <!-- Use Cases Overview -->
             <div class="mb-16">
-                <h2 class="text-4xl font-bold text-white mb-12 text-center">Core Business Analytics</h2>
+                <h2 class="text-4xl font-bold text-white mb-12 text-center">Use Cases Overview</h2>
                 <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
                     <div class="glass-strong rounded-xl p-8">
                         <div class="flex items-center mb-6">
@@ -288,123 +288,6 @@
                 </div>
             </div>
 
-            <!-- Industry-Specific Analytics -->
+            <!-- 50+ Mainstream Tools with APIs -->
             <div class="mb-16">
-                <h2 class="text-4xl font-bold text-white mb-12 text-center">Industry-Specific Analytics</h2>
-                <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
-                    <div class="glass-strong rounded-xl p-8">
-                        <div class="flex items-center mb-6">
-                            <div class="w-16 h-16 bg-red-600/20 rounded-2xl flex items-center justify-center mr-4">
-                                <span class="text-3xl">🏥</span>
-                            </div>
-                            <div>
-                                <h3 class="text-xl font-bold text-white">Healthcare Analytics</h3>
-                                <p class="text-zinc-400">Patient data and operations</p>
-                            </div>
-                        </div>
-                        <p class="text-zinc-300 mb-4 leading-relaxed">
-                            Analyze patient outcomes, resource utilization, and operational efficiency through EHR systems, medical devices, and healthcare APIs while maintaining HIPAA compliance.
-                        </p>
-                        <div class="text-sm text-zinc-400">
-                            <span class="text-red-400">Compliance:</span> HIPAA-ready data processing
-                        </div>
-                    </div>
-                    <div class="glass-strong rounded-xl p-8">
-                        <div class="flex items-center mb-6">
-                            <div class="w-16 h-16 bg-blue-600/20 rounded-2xl flex items-center justify-center mr-4">
-                                <span class="text-3xl">🏦</span>
-                            </div>
-                            <div>
-                                <h3 class="text-xl font-bold text-white">Financial Services</h3>
-                                <p class="text-zinc-400">Risk and compliance monitoring</p>
-                            </div>
-                        </div>
-                        <p class="text-zinc-300 mb-4 leading-relaxed">
-                            Monitor financial transactions, assess risk exposure, and ensure regulatory compliance through banking APIs, credit bureaus, and financial data providers.
-                        </p>
-                        <div class="text-sm text-zinc-400">
-                            <span class="text-blue-400">Standards:</span> PCI DSS compliant
-                        </div>
-                    </div>
-                    <div class="glass-strong rounded-xl p-8">
-                        <div class="flex items-center mb-6">
-                            <div class="w-16 h-16 bg-green-600/20 rounded-2xl flex items-center justify-center mr-4">
-                                <span class="text-3xl">🎓</span>
-                            </div>
-                            <div>
-                                <h3 class="text-xl font-bold text-white">Education Analytics</h3>
-                                <p class="text-zinc-400">Student and institutional insights</p>
-                            </div>
-                        </div>
-                        <p class="text-zinc-300 mb-4 leading-relaxed">
-                            Track student performance, engagement metrics, and institutional effectiveness through LMS platforms, student information systems, and educational assessment tools.
-                        </p>
-                        <div class="text-sm text-zinc-400">
-                            <span class="text-green-400">Privacy:</span> FERPA compliant
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Why Vector Streams for Business Analytics -->
-            <div class="mb-16">
-                <h2 class="text-4xl font-bold text-white mb-12 text-center">Why Vector Streams for Business Analytics?</h2>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <div class="glass-strong rounded-xl p-8 text-center">
-                        <div class="w-16 h-16 bg-purple-600/20 rounded-2xl flex items-center justify-center mx-auto mb-6">
-                            <span class="text-3xl">🔗</span>
-                        </div>
-                        <h3 class="text-xl font-bold text-white mb-4">Universal Data Integration</h3>
-                        <p class="text-zinc-400 leading-relaxed">
-                            Connect to any business tool or platform with just an API key. No complex data pipelines or custom integrations required.
-                        </p>
-                    </div>
-                    <div class="glass-strong rounded-xl p-8 text-center">
-                        <div class="w-16 h-16 bg-blue-600/20 rounded-2xl flex items-center justify-center mx-auto mb-6">
-                            <span class="text-3xl">⚡</span>
-                        </div>
-                        <h3 class="text-xl font-bold text-white mb-4">Real-Time Insights</h3>
-                        <p class="text-zinc-400 leading-relaxed">
-                            Get instant business insights as data flows through your systems, enabling faster decision-making and proactive business management.
-                        </p>
-                    </div>
-                    <div class="glass-strong rounded-xl p-8 text-center">
-                        <div class="w-16 h-16 bg-green-600/20 rounded-2xl flex items-center justify-center mx-auto mb-6">
-                            <span class="text-3xl">🧠</span>
-                        </div>
-                        <h3 class="text-xl font-bold text-white mb-4">Predictive Analytics</h3>
-                        <p class="text-zinc-400 leading-relaxed">
-                            Advanced AI algorithms predict customer behavior, market trends, and business outcomes with unprecedented accuracy.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- CTA Section -->
-            <div class="text-center">
-                <h2 class="text-3xl font-bold text-white mb-6">Transform Your Business Intelligence Today</h2>
-                <p class="text-lg text-zinc-400 mb-8 max-w-3xl mx-auto">
-                    Join forward-thinking businesses that are already leveraging Vector Streams for comprehensive data analysis and strategic insights.
-                </p>
-                <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                    <a href="dashboard.html" class="btn-primary px-8 py-4 rounded-xl text-lg">
-                        🚀 Start Business Analysis
-                    </a>
-                    <a href="vector-streams.html" class="btn-secondary px-8 py-4 rounded-xl text-lg">
-                        📚 Learn About Vector Streams
-                    </a>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    <script src="script.js"></script>
-    <script>
-        // Mobile menu toggle
-        document.getElementById("mobile-menu-button").addEventListener("click", function() {
-            const mobileMenu = document.getElementById("mobile-menu");
-            mobileMenu.classList.toggle("hidden");
-        });
-    </script>
-</body>
-</html>
+                <h2 class="text-4xl font-bold text-white mb-12 text-center">50+ Mainstream Tools with APIs</h2>
